fix spacing on matches so stays even

--- a/app/assets/stylesheets/custom.sass
+++ b/app/assets/stylesheets/custom.sass
@@ -38,3 +38,9 @@ th, td
 
 .match_table
   margin-bottom: 0
+
+table.match_table tr
+  height: 60px
+  td, th
+    vertical-align: middle
+    text-align: center
